# ChumpLib

./: .gitignore  CMakeLists.txt  LICENSE
chumpconv/: CMakeLists.txt  chumpconv.cpp
chumplib/: CMakeLists.txt
chumplib/include/: chumpfile.h  chumplib.h  tzarcfile.h
chumplib/src/: IOArchive.h  chumpfile.cpp  chumplib.cpp  tzarcfile.cpp
include/: chumplib.h
ja_testapp/: CMakeLists.txt  main.cpp
src/: chumplib.cpp
